# Fattyinsider

./: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  Dockerfile  Pipfile  TECHNICAL_SPEC.md  _worker.js  _worker.py  build.sh  cloudflare_pront.md  index.html  index.js  load_data.py  migrate_to_pinecone.py  package.json  pyproject.toml  readme.md  rename_txt_to_md.py  requirements-dev.txt  requirements-vercel.txt  requirements.txt  run.py  settings.py  setup.py  vector_store.py  vercel-build.sh  vercel.build.sh  vercel.json  vercel_app.py  vercel_app.py.bak
.github/workflows/: deploy.yml
.wrangler/tmp/bundle-7GumTZ/: middleware-loader.entry.ts
.wrangler/tmp/bundle-AzHyVp/: middleware-loader.entry.ts
.wrangler/tmp/bundle-G7mGYV/: middleware-loader.entry.ts
.wrangler/tmp/bundle-GOMLPS/: middleware-loader.entry.ts
.wrangler/tmp/bundle-GT1dMP/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-QNjpEC/: middleware-loader.entry.ts
.wrangler/tmp/bundle-YY0BPa/: middleware-insertion-facade.js  (+1 more)
S3EP201_204/: podcast_summaries_merged.txt
app/: __init__.py  main.py
app/api/: __init__.py  chat.py  data.py  search.py
app/core/: __init__.py  config.py  vercel_config.py
app/data/: __init__.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  chat_service.py  data_loader.py  document_processor.py  llm_service.py  vector_service.py  vector_store.py
app/static/: index.html
app/utils/: __init__.py  logger.py
functions/: ai-search.js
functions/api/: chat.py
static/: index.html
(+20 files in other folders)
